--- a/Sprint4/tpn1-partials/package.json
+++ b/Sprint4/tpn1-partials/package.json
@@ -7,5 +7,8 @@
     "express-validator": "^7.2.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.7.3"
+  },
+  "scripts": {
+    "start": "node src/start.js"
   }
 }
